@@ -59,11 +59,9 @@
 
 struct apr_thread_rwlock_t {
     apr_pool_t *pool;
-    HANDLE readevent;
-    HANDLE mutex;
-    HANDLE writemutex;
-    int counter;
-    int wrcounter;
+    HANDLE      write_mutex;
+    HANDLE      read_event;
+    LONG        readers;
 };
 
 #endif  /* THREAD_RWLOCK_H */
